Created basic Blazor cart example

--- a/src/Blazor/Client/Blazor.Client.csproj
+++ b/src/Blazor/Client/Blazor.Client.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Blazor.Shared.csproj" />
+    <ProjectReference Include="..\..\CartLib\CartLib.csproj" />
   </ItemGroup>
 
 </Project>
