--- a/src/Blazor/Server/Blazor.Server.csproj
+++ b/src/Blazor/Server/Blazor.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,8 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CartLib\CartLib.csproj" />
     <ProjectReference Include="..\Client\Blazor.Client.csproj" />
-    <ProjectReference Include="..\Shared\Blazor.Shared.csproj" />
   </ItemGroup>
 
 
